# FidelityFX-FSR

./: .gitignore  .gitlab-ci.yml  .gitmodules  readme.md
ffx-fsr/: ffx_a.h
sample/: CMakeLists.txt  common.cmake
sample/src/Common/: CMakeLists.txt  FSRSample.json
sample/src/DX12/: CMakeLists.txt  FSRSample.cpp  FSRSample.h  FSRTonemapping.h  FSR_Filter.cpp  FSR_Filter.h  FSR_Pass.hlsl  FSR_Tonemapping.hlsl  SampleRenderer.cpp  SampleRenderer.h  stdafx.cpp  stdafx.h
sample/src/VK/: CMakeLists.txt  FSRSample.cpp  FSRSample.h  FSRTonemapping.h  FSR_Filter.cpp  FSR_Filter.h  FSR_Pass.glsl  FSR_Pass.hlsl  FSR_Tonemapping.glsl  SampleRenderer.cpp  SampleRenderer.h  stdafx.cpp  stdafx.h
